tools/k8s/keystone/base/deployment-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keystone-py
  name: keystone-py
spec:
  replicas: 2
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app.kubernetes.io/name: keystone-py
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keystone-py
    spec:
      #serviceAccountName: keystone
      containers:
        - env:
            - name: OS_DATABASE__CONNECTION
              valueFrom:
                secretKeyRef:
                  key: fqdn-uri
                  name: keystone-db-app
          command: ["uwsgi", "--http-socket", ":5000", "-b", "65535", "--listen", "1024", "-w", "keystone.server.wsgi:initialize_public_application()", "--master", "--lazy-apps", "-p", "4"]
          image: py-keystone
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 4Gi
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: keystone-py
          ports:
            - containerPort: 5000
              name: http-py
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 600
            httpGet:
              path: /healthcheck
              port: 5000
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /var/log/keystone
              name: keystone-logs
            - mountPath: /etc/keystone/fernet-keys
              name: fernet
            - mountPath: /etc/keystone/keystone.conf
              name: config
              subPath: keystone.conf
            - mountPath: /tmp/spiffe
              name: certs

      volumes:
        - name: keystone-logs
          emptyDir: {}
        - name: config
          configMap:
            name: keystone
        - name: fernet
          secret:
            defaultMode: 420
            optional: false
            secretName: fernet-keys
            items:
              - key: "k0"
                path: "0"
              - key: "k1"
                path: "1"
        - name: "spire-agent-socket"
          hostPath:
            path: /run/spire/sockets
            type: Directory

        - name: "spiffe-workload-api"
          csi:
            driver: "csi.spiffe.io"
            readOnly: true
        - name: certs
          emptyDir: {}
