tools/k8s/keystone/base/deployment-rs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: keystone-rs
  name: keystone-rs
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app.kubernetes.io/name: keystone-rs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keystone-rs
    spec:
      containers:
        - env:
            - name: OS_DATABASE__CONNECTION
              valueFrom:
                secretKeyRef:
                  key: fqdn-uri
                  name: keystone-db-app
          command: ["keystone", "-vv"]
          image: keystone-rs
          name: keystone
          ports:
            - containerPort: 8080
              name: keystone-rs
              protocol: TCP

          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: keystone-rs
              scheme: HTTP
            periodSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: keystone-rs
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 600
            httpGet:
              path: /
              port: keystone-rs
              scheme: HTTP
            periodSeconds: 1
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/keystone/fernet-keys
              name: fernet
            - mountPath: /etc/keystone/keystone.conf
              name: config
              subPath: keystone.conf

        - command: ["opa", "run", "--server", "/policy", "--addr", ":8181", "--log-level", "debug"]
          image: opa
          name: opa
          ports:
            - containerPort: 8181
              name: http

      volumes:
        - name: config
          configMap:
            name: keystone
        - name: config-opa
          configMap:
            name: keystone-opa
        - name: fernet
          secret:
            defaultMode: 420
            optional: false
            secretName: fernet-keys
            items:
              - key: "k0"
                path: "0"
              - key: "k1"
                path: "1"
