tools/k8s/keystone/base/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: memcached
  name: memcached
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 300
  selector:
    matchLabels:
      app.kubernetes.io/name: memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/name: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6-alpine
          args: ["-m", "64"]
          ports:
            - containerPort: 11211
              name: memcache
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 11211
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 11211
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
spec:
  selector:
    app.kubernetes.io/name: memcached
  ports:
    - port: 11211
      targetPort: 11211
      protocol: TCP
      name: memcache
